@@ -1,3 +1,11 @@
+2012-12-06  JJ Allaire <jj@rstudio.org>
+
+        * R/Attributes.R: revert DOS newlines
+        * src/Attributes.cpp: revert DOS newlines; define RCPP_NO_SUGAR
+        * src/AttributesGen.cpp: revert DOS newlines
+        * src/AttributesParser.cpp: revert DOS newlines; define RCPP_NO_SUGAR
+        * include/Rcpp/iostream/Rstreambuf.h: revert DOS newlines
+  
 2012-12-06  Dirk Eddelbuettel  <edd@debian.org>
 
 	* src/exceptions.cpp: Added include of cstdlib to compile 
